# colco-rs

./: .gitignore  Cargo.toml  README.md  build.rs  c1ccc1.mol  index.html  package-lock.json  package.json  webpack.config.js
example/: README.md  package.json
example/src/: index.js
examples/rdkit/: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
examples/rdkit/assets/: index.html
examples/rdkit/src/: index.js
examples/starter/: README.md  package-lock.json  package.json  webpack.config.js
src/: assets.rs  colco.wasm  constants.rs  index.js  main.rs  mol.rs
static/: colco.js  index.html
