[package]
name = "colco"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
lto = true

[build-dependencies]
itertools = "*"
build_const = "*"
tobj = "*"
bytemuck = "1"

[dependencies]
lazy_static = "1.4.0"
glow = { version="*", default-features=false }
serde = { version = "1.0", default-features=false, features = ["derive"] }
regex = "1.3.1"
glam = "0.8.3"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.22.0-alpha3", optional = true }
sdl2 = { version = "0.32", optional = true }

[features]
default = ["std_web"]
web-sys = ["web_sys", "wasm-bindgen", "glow/web-sys"]
std_web = ["stdweb", "webgl_stdweb", "glow/stdweb"]
window-sdl2 = ["sdl2", "glow/sdl2"]
window-glutin = ["glutin", "glow/glutin"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features=["console"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
stdweb  = { version = "0.4.18", optional = true }
webgl_stdweb = { version = "0.3", optional = true }
